--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,27 +111,192 @@
 }
 
 
-.navbar-toggler-right {
-    
+.long-image {
+    min-height: 603px;
+    padding-bottom:10px;
 }
 
-.footer {
+.main-page-background {
+    background-image: url(../../assets/images/Cat-poke.png);
+    background-position:center;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    min-height: 603px;
+    padding-bottom:10px; 
+}
+
+
+
+.adopting {
+    min-height: 603px;
+    padding-bottom:10px; 
+}
+
+.title {
+    font-size:50px;
+    text-align:Center;
+    padding:20px;
+}
+
+.salem-cat {
+    background-image: url(../../assets/images/Salem.png);
+    background-position:contain;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    height: 182px;
+    width: 253px;
+    text-align:center;
+}
+
+.savannah-cat {
+    background-image: url(../../assets/images/Savannah.jpg);
+    background-position:contain;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    height: 182px;
+    width: 253px;
+    text-align:center;
+}
+
+.savannah-cat {
+    background-image: url(../../assets/images/charlie.png);
+    background-position:contain;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    height: 182px;
+    width: 253px;
+    text-align:center;
+}
+
+.donate-panel {
+    min-height: 603px;
+    padding-bottom:10px; 
+}
+
+.footer-panel {
     background-color:black;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align:center;
     padding-bottom:10px;
 }
 
-.footer p{
+.footer-panel p{
     font-size:15px;
     color:#e5b7e9
 }
 
-.footer i{
+.footer-panel i{
     color:#e5b7e9
 }
 
 .button-color{
     background-color:#e5b7e9
+}
+
+.modal-image {
+    
+    background-image: url(../../assets/images/map.png);
+    background-position:absolute;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    min-height: 250px;
+    padding-bottom:10px; 
+}
+
+.address-info {
+    font-size:15px;
+}
+
+
+@media screen and (max-width: 2000px ){
+.slogan {
+    color:black;
+  font-size: 20px;
+  position: absolute;
+  width:300px;
+  height:200px;
+  padding-top:40px;
+  padding-left:10px;
+  bottom:180px;
+  right:400px;
+  
+  
+}
+
+}
+
+@media screen and (max-width: 1200px ){
+.slogan {
+    color:black;
+  font-size: 20px;
+  position: absolute;
+  width:300px;
+  height:200px;
+  padding-top:40px;
+  padding-left:10px;
+  bottom:180px;
+  right:250px;
+  
+  
+}
+
+}
+
+@media screen and (max-width: 1000px ){
+.slogan {
+    color:black;
+  font-size: 20px;
+  position: absolute;
+  width:300px;
+  height:200px;
+  padding-top:40px;
+  padding-left:10px;
+  bottom:180px;
+  right:180px;
+  
+  
+}
+
+}
+
+
+@media screen and (max-width: 800px){
+.long-image {
+    min-height:303px;
+}
+
+.slogan {
+    color:black;
+  font-size: 20px;
+  position: absolute;
+  width:300px;
+  height:200px;
+  padding-top:10px;
+  padding-left:10px;
+  bottom:250px;
+  right:0;
+  
+  
+}
+
+
+.main-page-background {
+    
+    background-image: url(../../assets/images/Cat-poke.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;     
+    padding-bottom:10px; 
+    padding-right:0px;
+    object-fit: cover;
+    min-height:300px;
+
+  
+
+    
+    
+}
+
+
 }
