--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,14 +212,14 @@
 @media screen and (max-width: 2000px ){
 .slogan {
     color:black;
-  font-size: 20px;
-  position: absolute;
+  font-size: 30px;
+  position: relative;
   width:300px;
   height:200px;
   padding-top:40px;
   padding-left:10px;
-  bottom:180px;
-  right:400px;
+  bottom:450px;
+  left:630px;
   
   
 }
@@ -229,14 +229,14 @@
 @media screen and (max-width: 1200px ){
 .slogan {
     color:black;
-  font-size: 20px;
-  position: absolute;
+  font-size: 30px;
+  position: relative;
   width:300px;
   height:200px;
   padding-top:40px;
   padding-left:10px;
-  bottom:180px;
-  right:250px;
+  bottom:450px;
+  left:480px;
   
   
 }
@@ -246,14 +246,14 @@
 @media screen and (max-width: 1000px ){
 .slogan {
     color:black;
-  font-size: 20px;
-  position: absolute;
+  font-size: 25px;
+  position: relative;
   width:300px;
   height:200px;
   padding-top:40px;
   padding-left:10px;
-  bottom:180px;
-  right:180px;
+  bottom:450px;
+  left:350px;
   
   
 }
@@ -261,7 +261,47 @@
 }
 
 
-@media screen and (max-width: 800px){
+@media screen and (max-width:800px){
+.long-image {
+    min-height:303px;
+}
+
+.slogan {
+    color:black;
+  font-size: 25px;
+  position: relative;
+   bottom:250px;
+  left:250px;  
+  text-align: center;  
+  padding-top:10px;
+  padding-left:10px;
+ 
+  
+  
+}
+
+
+.main-page-background {
+    
+    background-image: url(../../assets/images/Cat-poke.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;     
+    padding-bottom:10px; 
+    padding-right:0px;
+    object-fit: cover;
+    min-height:300px;
+
+  
+
+    
+    
+}
+
+
+}
+
+@media screen and (max-width: 600px){
 .long-image {
     min-height:303px;
 }
@@ -269,13 +309,13 @@
 .slogan {
     color:black;
   font-size: 20px;
-  position: absolute;
-  width:300px;
-  height:200px;
+  position: relative;
+    bottom:250px;
+  left:70px;  
+  text-align: center;  
   padding-top:10px;
   padding-left:10px;
-  bottom:250px;
-  right:0;
+  
   
   
 }
