--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,32 @@
   left: 870px;
 }
 
+.advice-page-background {
+  background-image: url(../../assets/images/cat-fuss.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 603px;
+  padding-bottom: 10px;
+  background-color: rgb(0, 0, 0);
+  opacity:0.8;
+}
+
+
+.videos-section{
+       
+}
+
+.video-box{
+    padding:50px;
+}
+
+.video-title {
+  text-align: center;
+  font-size: 20px;
+}
+
+
 .footer-panel {
   background-color: black;
   position: relative;
@@ -304,6 +330,7 @@
   font-size: 15px;
 }
 
+
 @media screen and (max-width: 2560px) {
   .slogan {
     color: black;
@@ -316,10 +343,37 @@
     bottom: 450px;
     left: 630px;
   }
-}
+
+  .advice-slogan {
+    color: black;
+    font-size: 30px;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 600px;
+    left: 770px;
+  }
+
+
 
 @media screen and (max-width: 1200px) {
+
+
   .slogan {
+    color: black;
+    font-size: 30px;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 450px;
+    left: 630px;
+  }
+
+   .advice-slogan {
     color: black;
     font-size: 30px;
     position: relative;
@@ -370,6 +424,18 @@
 
 @media screen and (max-width: 1024px) {
   .slogan {
+    color: black;
+    font-size: 30px;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 450px;
+    left: 480px;
+  }
+
+   .advice-slogan {
     color: black;
     font-size: 30px;
     position: relative;
@@ -563,6 +629,17 @@
     bottom: 230px;
     left: 410px;
   }
+
+  .advice-page-background {
+    background-image: url(../../assets/images/cat-fuss.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 10px;
+    padding-right: 0px;
+    object-fit: cover;
+    min-height: 300px;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -695,6 +772,18 @@
     bottom: 230px;
     left: 260px;
   }
+
+  .advice-page-background {
+    background-image: url(../../assets/images/cat-fuss.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 10px;
+    padding-right: 0px;
+    object-fit: cover;
+    min-height: 300px;
+    background-position-x: 20%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -715,6 +804,17 @@
 
   .main-page-background {
     background-image: url(../../assets/images/Cat-poke.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 10px;
+    padding-right: 0px;
+    object-fit: cover;
+    min-height: 300px;
+  }
+
+  .advice-page-background {
+    background-image: url(../../assets/images/cat-fuss.png);
     background-position: absolute;
     background-size: cover;
     background-repeat: no-repeat;
@@ -838,8 +938,30 @@
     padding-left: 10px;
   }
 
+  .advice-slogan {
+    color: black;
+    font-size: 20px;
+    position: relative;
+    bottom: 250px;
+    left: 10px;
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
   .main-page-background {
     background-image: url(../../assets/images/Cat-poke.png);
+    background-position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 10px;
+    padding-right: 0px;
+    object-fit: cover;
+    min-height: 300px;
+  }
+
+  .advice-page-background {
+    background-image: url(../../assets/images/cat-fuss.png);
     background-position: absolute;
     background-size: cover;
     background-repeat: no-repeat;
