--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,9 +282,6 @@
 }
 
 
-.videos-section{
-       
-}
 
 .video-box{
     padding:50px;
@@ -293,6 +290,8 @@
 .video-title {
   text-align: center;
   font-size: 20px;
+  position:relative;
+  top:40px;
 }
 
 
@@ -353,7 +352,7 @@
     padding-top: 40px;
     padding-left: 10px;
     bottom: 600px;
-    left: 770px;
+    left: 790px;
   }
 
 
@@ -381,8 +380,8 @@
     height: 200px;
     padding-top: 40px;
     padding-left: 10px;
-    bottom: 450px;
-    left: 630px;
+    bottom: 600px;
+    left: 530px;
   }
 
   .upper-statement {
@@ -443,8 +442,8 @@
     height: 200px;
     padding-top: 40px;
     padding-left: 10px;
-    bottom: 450px;
-    left: 480px;
+    bottom: 600px;
+    left: 380px;
   }
   .upper-image {
     background: rgb(0, 0, 0);
@@ -527,6 +526,17 @@
     position: relative;
     bottom: 250px;
     left: 250px;
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
+  .advice-slogan {
+    color: black;
+    font-size: 25px;
+    position: relative;
+    bottom: 300px;
+    left: 200px;
     text-align: center;
     padding-top: 10px;
     padding-left: 10px;
@@ -653,6 +663,17 @@
     position: relative;
     bottom: 250px;
     left: 70px;
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
+    .advice-slogan {
+    color: black;
+    font-size: 20px;
+    position: relative;
+    bottom: 300px;
+    left: 160px;
     text-align: center;
     padding-top: 10px;
     padding-left: 10px;
@@ -942,7 +963,7 @@
     color: black;
     font-size: 20px;
     position: relative;
-    bottom: 250px;
+    bottom: 300px;
     left: 10px;
     text-align: center;
     padding-top: 10px;
@@ -969,6 +990,7 @@
     padding-right: 0px;
     object-fit: cover;
     min-height: 300px;
+    opacity:0.6;
   }
 
   .adopting-panel {
