--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@
   border-width: 1px;
   border-radius: 50%;
 }
+
 .left-circle {
   position: relative;
   left: 50px;
@@ -245,7 +246,7 @@
   padding-bottom: 10px;
   background-color: rgb(0, 0, 0);
   opacity: 0.8;
-  z-index: -1;
+  
 }
 
 .support-title {
@@ -262,10 +263,12 @@
   text-align: center;
   font-size: 30px;
   color: black;
-  z-index: 1;
+  
   position: relative;
   top: 70px;
 }
+
+
 .support-page-donate-panel button {
   position: relative;
   top: 250px;
@@ -274,7 +277,19 @@
   width: 150px;
   font-size: 25px;
   border: 3px solid black;
+ 
 }
+
+
+
+#donateModal {
+    background-position: absolute;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+  padding-bottom: 10px;
+}
+
 .advice-page-background {
   background-image: url(../../assets/images/cat-fuss.png);
   background-position: center;
